--- a/conservation.html
+++ b/conservation.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+    Author: Joe and Hunter
+    Date: 4/24/2024
+    File name: conservation.html
+-->
 
 <head>
     <title>PADI AWARE Foundation | Conservation</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Sedan:ital@0;1&display=swap"
         rel="stylesheet">
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="images/site.webmanifest">
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
@@ -41,6 +49,7 @@
             <div id="icon">&#9776;</div>
         </a>
     </nav>
+    <!-- Tab-desk Nav -->
     <nav class="tab-desk">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -128,7 +137,6 @@
             </form>
         </div>
 
-
         <br> <br> <br>
         <div class="grid-container2">
             <img src="images/shark.jpg">
@@ -136,7 +144,6 @@
                 <h2>Operation: Save the Sharks</h2>
                 <p>With your help we can save the sharks!! Donate today!</p>
             </div>
-
         </div>
 
     </main>
