--- a/courses.html
+++ b/courses.html
@@ -5,28 +5,36 @@
     File name: courses.html
 -->
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PADI AWARE Foundation | Courses</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Sedan:ital@0;1&display=swap"
+        rel="stylesheet">
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="images/site.webmanifest">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
         <h1>PADI AWARE Foundation</h1>
     </header>
-     <!-- Mobile Nav -->
+    <!-- Mobile Nav -->
     <nav class="mobile-nav">
         <div id="nav-links">
             <a href="index.html">Home</a>
@@ -60,15 +68,22 @@
             <div class="container-3">
                 <div class="course">
                     <h2 class="course-title">Open Water Diver</h2>
-                    <p class="course-description">Explore the underwater world and learn the basics of scuba diving with our Open Water Diver course. This entry-level certification course is perfect for beginners and covers essential diving skills and safety techniques.</p>
+                    <p class="course-description">Explore the underwater world and learn the basics of scuba diving with
+                        our Open Water Diver course. This entry-level certification course is perfect for beginners and
+                        covers essential diving skills and safety techniques.</p>
                 </div>
                 <div class="course">
                     <h2 class="course-title">Advanced Open Water Diver</h2>
-                    <p class="course-description">Take your diving skills to the next level with our Advanced Open Water Diver course. This course offers exciting adventure dives that allow you to gain confidence and experience in various underwater environments while refining your diving techniques.</p>
+                    <p class="course-description">Take your diving skills to the next level with our Advanced Open Water
+                        Diver course. This course offers exciting adventure dives that allow you to gain confidence and
+                        experience in various underwater environments while refining your diving techniques.</p>
                 </div>
                 <div class="course">
                     <h2 class="course-title">Rescue Diver</h2>
-                    <p class="course-description">Become a confident and competent diver by enrolling in our Rescue Diver course. Learn essential rescue and emergency management skills to help yourself and others in challenging diving situations. This course is essential for any serious diver looking to enhance their safety and preparedness.</p>
+                    <p class="course-description">Become a confident and competent diver by enrolling in our Rescue
+                        Diver course. Learn essential rescue and emergency management skills to help yourself and others
+                        in challenging diving situations. This course is essential for any serious diver looking to
+                        enhance their safety and preparedness.</p>
                 </div>
             </div>
         </section>
@@ -80,10 +95,13 @@
             <p><a href="mailto:padi@gmail.com">padi@gmail.com</a></p>
         </div>
         <div class="social">
-            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.png" alt="Facebook Logo"></a>
-            <a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png" alt="Twitter Logo"></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.png"
+                    alt="Facebook Logo"></a>
+            <a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png"
+                    alt="Twitter Logo"></a>
         </div>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
