--- a/gallery.html
+++ b/gallery.html
@@ -10,18 +10,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PADI AWARE Foundation | Gallery</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Sedan:ital@0;1&display=swap"
+        rel="stylesheet">
+
     <!-- Font Awesome icons (free version)-->
     <script src="https://kit.fontawesome.com/926262d559.js" crossorigin="anonymous"></script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
 
-
-
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -54,7 +57,6 @@
     </nav>
 
     <main>
-        
         <section class="gallery" id="portfolio">
             <div class="container">
                 <div class="text-center">
@@ -262,7 +264,12 @@
                                 <img class="img-fluid d-block mx-auto" src="images/sea-turtle.jpg"
                                     alt="sea turtle swimming in open water">
                                 <strong>Aqua</strong>
-                                <p>In our efforts to conserve marine life, we encountered a distressed sea turtle named Aqua. With patience and expertise, we provided Aqua with the necessary medical care and rehabilitation. Over time, Aqua regained strength and vitality, showcasing the remarkable resilience of these magnificent creatures. After a successful recovery, Aqua was joyfully released back into the ocean, where she now thrives, a symbol of hope for the future of sea turtle conservation.</p>
+                                <p>In our efforts to conserve marine life, we encountered a distressed sea turtle named
+                                    Aqua. With patience and expertise, we provided Aqua with the necessary medical care
+                                    and rehabilitation. Over time, Aqua regained strength and vitality, showcasing the
+                                    remarkable resilience of these magnificent creatures. After a successful recovery,
+                                    Aqua was joyfully released back into the ocean, where she now thrives, a symbol of
+                                    hope for the future of sea turtle conservation.</p>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
                                     type="button">
                                     <i class="fas fa-xmark me-1"></i>
@@ -289,7 +296,14 @@
                                 <img class="img-fluid d-block mx-auto" src="images/seal.jpg"
                                     alt="seal looking up at camera">
                                 <strong>Finn</strong>
-                                <p>We recently rescued a seal named Finn. Finn was found stranded on the shore, injured from a fishing net entanglement. Through dedicated rehabilitation efforts, Finn received medical treatment and rehabilitation to heal his wounds and regain his strength. Finn's successful recovery highlights the importance of marine conservation and the impact of human actions on marine life. After rehabilitation, Finn was released back into his natural habitat, where he now thrives, serving as a reminder of the resilience of wildlife and the importance of conservation efforts.</p>
+                                <p>We recently rescued a seal named Finn. Finn was found stranded on the shore, injured
+                                    from a fishing net entanglement. Through dedicated rehabilitation efforts, Finn
+                                    received medical treatment and rehabilitation to heal his wounds and regain his
+                                    strength. Finn's successful recovery highlights the importance of marine
+                                    conservation and the impact of human actions on marine life. After rehabilitation,
+                                    Finn was released back into his natural habitat, where he now thrives, serving as a
+                                    reminder of the resilience of wildlife and the importance of conservation efforts.
+                                </p>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
                                     type="button">
                                     <i class="fas fa-xmark me-1"></i>
@@ -313,9 +327,14 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Rehabilitated Shark</h2>
                                 <p class="item-intro text-muted">Back to chasing fish again!</p>
-                                <img class="img-fluid d-block mx-auto" src="images/sharkCloseUp.jpg" alt="shark swimming in open water looking at the camera">
+                                <img class="img-fluid d-block mx-auto" src="images/sharkCloseUp.jpg"
+                                    alt="shark swimming in open water looking at the camera">
                                 <strong>Maverick</strong>
-                                <p>Let's introduce Maverick, a shark who faced adversity after getting caught in discarded fishing nets. Maverick's journey to recovery was challenging, but with specialized care and rehabilitation, he made a remarkable turnaround. Maverick's resilience serves as a testament to the importance of marine conservation efforts in preserving the delicate balance of our oceans.</p>
+                                <p>Let's introduce Maverick, a shark who faced adversity after getting caught in
+                                    discarded fishing nets. Maverick's journey to recovery was challenging, but with
+                                    specialized care and rehabilitation, he made a remarkable turnaround. Maverick's
+                                    resilience serves as a testament to the importance of marine conservation efforts in
+                                    preserving the delicate balance of our oceans.</p>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
                                     type="button">
                                     <i class="fas fa-xmark me-1"></i>
@@ -339,9 +358,16 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Rehabilitated Whale</h2>
                                 <p class="item-intro text-muted">Back to eating in the open ocean once more!</p>
-                                <img class="img-fluid d-block mx-auto" src="images/whale.jpg" alt="whale jumping out of the water">
+                                <img class="img-fluid d-block mx-auto" src="images/whale.jpg"
+                                    alt="whale jumping out of the water">
                                 <strong>Orion</strong>
-                                <p>Introducing Orion, a magnificent humpback whale who embarked on a remarkable journey of rehabilitation after being discovered injured and stranded on a remote beach. With the help of a dedicated team of marine experts and volunteers, Orion received around-the-clock care and support to nurse him back to health. Through their tireless efforts, Orion regained his strength and was eventually released back into the vast ocean, where he now roams the depths, a testament to the power of compassion and perseverance in the face of adversity.</p>
+                                <p>Introducing Orion, a magnificent humpback whale who embarked on a remarkable journey
+                                    of rehabilitation after being discovered injured and stranded on a remote beach.
+                                    With the help of a dedicated team of marine experts and volunteers, Orion received
+                                    around-the-clock care and support to nurse him back to health. Through their
+                                    tireless efforts, Orion regained his strength and was eventually released back into
+                                    the vast ocean, where he now roams the depths, a testament to the power of
+                                    compassion and perseverance in the face of adversity.</p>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
                                     type="button">
                                     <i class="fas fa-xmark me-1"></i>
