--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
+<!--
+    Author: Joe and Hunter
+    Date: 4/24/2024
+    File name: contact.html
+-->
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PADI AWARE Foundation | Contact</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Sedan:ital@0;1&display=swap"
+        rel="stylesheet">
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="images/site.webmanifest">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
         <h1>PADI AWARE Foundation</h1>
@@ -56,28 +69,26 @@
                 <li>Address: 500 Sea World Dr., San Diego, CA 92109
                 </li>
             </ul>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27484604.17339757!2d-156.2498771!3d32.76429579999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80deaa60b159eb77%3A0xb8b8a676d2bbc3fe!2sSeaWorld%20San%20Diego!5e0!3m2!1sen!2sus!4v1713799282528!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27484604.17339757!2d-156.2498771!3d32.76429579999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80deaa60b159eb77%3A0xb8b8a676d2bbc3fe!2sSeaWorld%20San%20Diego!5e0!3m2!1sen!2sus!4v1713799282528!5m2!1sen!2sus"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
 
-	<footer>
-		<div class="copyright">
-			<p>&copy; Copyright 2021. All Rights Reserved.</p>
-			<p><a href="mailto:jeeed@gmail.com">padi@gmail.com</a></p>
-		</div>
-		<div class="social">
-			<a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.png" alt="Facebook Logo"></a>
-			<a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png" alt="Twitter Logo"></a>
-		</div>
-	</footer>
+    <footer>
+        <div class="copyright">
+            <p>&copy; Copyright 2021. All Rights Reserved.</p>
+            <p><a href="mailto:jeeed@gmail.com">padi@gmail.com</a></p>
+        </div>
+        <div class="social">
+            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.png"
+                    alt="Facebook Logo"></a>
+            <a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png"
+                    alt="Twitter Logo"></a>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
