--- a/membership.html
+++ b/membership.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
+<!--
+    Author: Joe and Hunter
+    Date: 4/24/2024
+    File name: membership.html
+-->
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PADI AWARE Foundation | Membership</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Sedan:ital@0;1&display=swap"
+        rel="stylesheet">
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="images/site.webmanifest">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
         <h1>PADI AWARE Foundation</h1>
@@ -58,9 +71,12 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Enjoy 20% OFF select PADI eLearning® programs, FREE ReActivate® online refresher, subscription to Scuba Diving magazine + so much more when you join PADI Club™.</td>
-                    <td>Live a life others only dream about. Share your love of diving, experience new adventures, expand your dive skills, and help save the ocean.</td>
-                    <td>With Platium you can take a ship out to the middle of the ocean. We will help you shark dive and see the sharks you helped save.</td>
+                    <td>Enjoy 20% OFF select PADI eLearning® programs, FREE ReActivate® online refresher, subscription
+                        to Scuba Diving magazine + so much more when you join PADI Club™.</td>
+                    <td>Live a life others only dream about. Share your love of diving, experience new adventures,
+                        expand your dive skills, and help save the ocean.</td>
+                    <td>With Platium you can take a ship out to the middle of the ocean. We will help you shark dive and
+                        see the sharks you helped save.</td>
                 </tr>
                 <tr>
                     <td>$20 monthly</td>
@@ -74,20 +90,21 @@
                 </tr>
             </tbody>
         </table>
-
-
     </main>
 
-	<footer>
-		<div class="copyright">
-			<p>&copy; Copyright 2021. All Rights Reserved.</p>
-			<p><a href="mailto:jeeed@gmail.com">padi@gmail.com</a></p>
-		</div>
-		<div class="social">
-			<a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.png" alt="Facebook Logo"></a>
-			<a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png" alt="Twitter Logo"></a>
-		</div>
-	</footer>
+    <footer>
+        <div class="copyright">
+            <p>&copy; Copyright 2021. All Rights Reserved.</p>
+            <p><a href="mailto:jeeed@gmail.com">padi@gmail.com</a></p>
+        </div>
+        <div class="social">
+            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.png"
+                    alt="Facebook Logo"></a>
+            <a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png"
+                    alt="Twitter Logo"></a>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
